--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -41,7 +41,7 @@ body {
 /* ids */
 .step01 {
   background-color: #fff;
-  height: 70%;
+  height: 75%;
 }
 
 .step01__content {
@@ -69,7 +69,7 @@ body {
   padding: 20px 10px;
   width: 350px;
   display: block;
-  margin: 4px auto;
+  margin: 30px auto 10px auto;
 }
 
 .btn-register {
