--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -70,7 +70,7 @@ body {
   padding: 20px 10px;
   width: 350px;
   display: block;
-  margin: 30px auto 10px auto;
+  margin-top: 24px;
 }
 
 .btn-register {
@@ -80,7 +80,6 @@ body {
   border-radius: 10px;
   padding: 20px 10px;
   width: 350px;
-  margin: 10px auto;
   display: block;
 }
 
