--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -44,7 +44,7 @@ body {
   height: 70%;
 }
 
-.step01__content {
+.step__content {
   height: 350px;
   text-align: center;
   padding: 0 16px;
@@ -70,7 +70,7 @@ body {
   padding: 20px 10px;
   width: 350px;
   display: block;
-  margin-top: 20px;
+  margin-top: 36px;
 }
 
 .btn-register {
